Working on getting the list of featured streams to show

--- a/style.css
+++ b/style.css
@@ -3,6 +3,17 @@ html, body {
   /*box-sizing: border-box;*/
 }
 
+.follow{
+  position: absolute;
+  right: 5px;
+}
+button{
+  background-color: purple;
+  border: none;
+  color: white;
+}
+
+
 #navbarContainer {
   /*position: fixed;*/
   height: 52px;
