--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,16 @@
   border: 1px solid #392e5c;
   color: #dad8de; }
 
+button {
+  background-color: #3a2e5b;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px; }
+
 /*! bulma.io v0.6.2 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
