Taking color out of css and into sass

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -27,6 +27,9 @@ $navbar-item-color: #dad8de;
 $navbar-background-color: #3a2e5b;
 $media-content-color: #dad8de;
 
+#streamerTextPost{
+  color:#dad8de;
+}
 #input{
   background-color: #0e0c13;
   border: 1px solid #392e5c;
