Top Navbar dropdown added and spaced

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -53,7 +53,15 @@ $subtitle-color: #dad8de;
 $navbar-item-color: #dad8de;
 $navbar-background-color: #3a2e5b;
 $media-content-color: #dad8de;
-
+#drpDown{
+  background-color: #3a2e5b;
+  border: 0;
+  color: #dad8de;
+}
+#dropdown-content{
+  background-color: #201c2b;
+  color: #dad8de;
+}
 #streamerTextPost{
   color:#dad8de;
 }
