--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
+#drpDown {
+  background-color: #3a2e5b;
+  border: 0;
+  color: #dad8de; }
+
+#dropdown-content {
+  background-color: #201c2b;
+  color: #dad8de; }
+
 #streamerTextPost {
   color: #dad8de; }
 
