touched up left nav more

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+#hr {
+  color: #3a2e5b;
+  background-color: #3a2e5b;
+  margin-top: 10px; }
+
 #drpDown {
   background-color: #3a2e5b;
   border: 0;
