--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -53,6 +53,11 @@ $subtitle-color: #dad8de;
 $navbar-item-color: #dad8de;
 $navbar-background-color: #3a2e5b;
 $media-content-color: #dad8de;
+#hr{
+  color:#3a2e5b;
+  background-color: #3a2e5b;
+  margin-top: 10px;
+}
 #drpDown{
   background-color: #3a2e5b;
   border: 0;
