--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@
     }
 }
 
+.friendText{
+  text-align: center;
+}
+.leftNavViewerCount{
+  z-index: 1;
+  text-align: right;
+  color: red;
+}
 .userInfo{
   margin-left: 5px;
 }
@@ -233,4 +241,8 @@ margin-top: 5px;
   max-width: 24px;
   max-height: 24px;
   border-radius: 50%;
+}
+.friendListText{
+  margin-top: 50px !important;
+  margin-left: 5px !important;
 }
