--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
     .posterName{
       display: none;
     }
+    .leftNavHide{
+      display: none
+    }
 }
 @media only screen and (max-width: 1023px) {
     .rightNavHide {
