--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@
   padding-right: 10px;
 
 }
+#rightCont{
+  position: sticky;
+}
 .postSomething{
   overflow:auto;
   padding-right: 7px;
@@ -205,13 +208,19 @@ html, body {
 #streamerTextPost{
   margin: 0;
 }
-
+#sidTextPost{
+  margin: 0;
+}
 .column.is-2{
   border-right-style: solid;
   border-right-color: #3a2e5b;
 }
 
-
+.leftNavInput{
+   background-color: #0e0c13 !important;
+   border: 1px solid #392e5c !important;
+   color: #dad8de !important;
+ }
 .followingStreamer{
   overflow: hidden;
 /* height: 100%; */
